--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,6 @@
         "next/core-web-vitals"
     ],
     "rules": {
-        "@next/next/no-img-element": "off",
+        // "@next/next/no-img-element": "off",
     }
 }
